Resolve text horizontal overflowing issue

--- a/src/Slide/Slide.module.css
+++ b/src/Slide/Slide.module.css
@@ -7,6 +7,8 @@
   object-fit: cover;
   overflow: auto;
   background: transparent;
+  overflow-wrap: break-word;
+  word-break: normal;
   display: flex;
   flex-direction: row;
   justify-content: center;
